[package]
name = "advent_of_code2020_rust"
version = "0.1.0"
authors = ["Guillermo Muntaner <guillermomp87@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
lazy_static = "1"
array2d = "0.2.1"
reduce = "0.1.3"